--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         #locomotive-carousel {
             perspective: 1800px;
             overflow: hidden;
-            height: 400px;
+            height: 500px;
             position: relative;
         }
 
@@ -117,7 +117,7 @@
         .loco-image {
             object-fit: cover;
             width: 95%;
-            height: 350px;
+            height: 450px;
             max-width: 900px;
             border-radius: 0.75rem;
             box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
@@ -171,6 +171,78 @@
             border-color: #EF4444;
             background-color: #FEF2F2;
         }
+
+        .mobile-menu {
+            transform: translateX(-100%);
+            transition: transform 0.3s ease-out;
+        }
+        
+        .mobile-menu.active {
+            transform: translateX(0);
+        }
+
+        @media (max-width: 768px) {
+            #locomotive-carousel {
+                height: 350px;
+                perspective: 1200px;
+            }
+
+            .loco-image {
+                height: 300px;
+                width: 90%;
+            }
+
+            .carousel-slide.active {
+                transform: translateX(0) scale(1.02) translateZ(50px);
+            }
+
+            .carousel-slide.prev {
+                transform: translateX(-70%) scale(0.8) rotateY(10deg) translateZ(-100px);
+            }
+
+            .carousel-slide.next {
+                transform: translateX(70%) scale(0.8) rotateY(-10deg) translateZ(-100px);
+            }
+
+            .nav-overlay {
+                width: 20%;
+            }
+
+            #intro h2 {
+                font-size: 2rem;
+            }
+
+            #intro p {
+                font-size: 1.1rem;
+            }
+
+            .modal-content {
+                margin: 1rem;
+                width: calc(100% - 2rem);
+            }
+        }
+
+        @media (max-width: 480px) {
+            #locomotive-carousel {
+                height: 280px;
+            }
+
+            .loco-image {
+                height: 240px;
+            }
+
+            .nav-overlay {
+                display: none;
+            }
+
+            header nav {
+                display: none;
+            }
+
+            .mobile-menu-button {
+                display: block;
+            }
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -200,7 +272,7 @@
                 <span class="sm:hidden text-rzd-red">Демо-портал</span>
             </h1>
             
-            <nav class="flex space-x-2 sm:space-x-4">
+            <nav class="hidden md:flex space-x-2 sm:space-x-4">
                 <a href="#intro" class="nav-link">Главная</a>
                 <a href="#locomotives" class="nav-link">Локомотивы</a>
                 <a href="#crew-life" class="nav-link">Жизнь машиниста</a>
@@ -209,8 +281,36 @@
                     Обратная связь
                 </button>
             </nav>
+
+            <button class="md:hidden mobile-menu-button p-2" onclick="toggleMobileMenu()">
+                <svg class="w-6 h-6 text-rzd-red" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+                </svg>
+            </button>
         </div>
     </header>
+
+    <div class="mobile-menu fixed inset-0 bg-white z-40 md:hidden">
+        <div class="p-6">
+            <div class="flex justify-between items-center mb-8">
+                <h2 class="text-xl font-bold text-rzd-red">Меню</h2>
+                <button onclick="toggleMobileMenu()" class="p-2">
+                    <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                    </svg>
+                </button>
+            </div>
+            <nav class="space-y-4">
+                <a href="#intro" class="block nav-link text-lg" onclick="toggleMobileMenu()">Главная</a>
+                <a href="#locomotives" class="block nav-link text-lg" onclick="toggleMobileMenu()">Локомотивы</a>
+                <a href="#crew-life" class="block nav-link text-lg" onclick="toggleMobileMenu()">Жизнь машиниста</a>
+                <a href="#education" class="block nav-link text-lg" onclick="toggleMobileMenu()">Обучение</a>
+                <button onclick="openModal(); toggleMobileMenu();" class="w-full text-left px-4 py-3 bg-rzd-red text-white rounded-lg font-semibold mt-4">
+                    Обратная связь
+                </button>
+            </nav>
+        </div>
+    </div>
 
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10">
 
@@ -420,7 +520,7 @@
         let autoScrollInterval;
         const CAROUSEL_DURATION = 5000;
         const MANUAL_INTERACTION_DELAY = 10000;
-        const MAX_FILE_SIZE = 50 * 1024 * 1024; // 50MB
+        const MAX_FILE_SIZE = 50 * 1024 * 1024;
 
         const track = document.getElementById('carousel-track');
         const paginationContainer = document.getElementById('carousel-pagination');
@@ -450,7 +550,7 @@
                 slide.innerHTML = `
                     <div class="w-full h-full flex items-center justify-center" onclick="navigateCarousel(${index}, true)">
                         <img src="images/locomotives/${imageFile}" alt="${loco.name}" class="loco-image" 
-                            onerror="this.onerror=null;this.src='https://placehold.co/900x350/D52B1E/ffffff?text=${loco.name}'">
+                            onerror="this.onerror=null;this.src='https://placehold.co/900x450/D52B1E/ffffff?text=${loco.name}'">
                     </div>
                 `;
                 track.appendChild(slide);
@@ -550,6 +650,10 @@
         const emailError = document.getElementById('email-error');
         const submitButton = document.getElementById('submit-button');
         const spinner = document.getElementById('spinner');
+
+        function toggleMobileMenu() {
+            document.querySelector('.mobile-menu').classList.toggle('active');
+        }
 
         function openModal() {
             modal.classList.add('active');
