--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Демо-портал машиниста — Путь к профессии</title>
     <link rel="icon" href="/favicon.ico">
+    <meta property="og:title" content="Демо-портал машиниста — Профессия Будущего">
+    <meta property="og:description" content="Исследуйте историю и технологии железных дорог России. От легендарных электровозов до высокоскоростных поездов.">
+    <meta property="og:url" content="https://rzd-machinist-portal.vercel.app/">
+    <meta property="og:image" content="https://rzd-machinist-portal.vercel.app/images/favicon.jpg">
+    <meta property="og:type" content="website">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <style>
